# AI-InterviewerMVP

./: README.md  pyproject.toml
ai_interviewer/: __init__.py  audio.py  controller.py  cv_parser.py  interview_flow.py  llm.py  meet.py  settings.py  transcript.py
app/: main.py
